2011-01-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed parsing bug with IMDb results (Bug 262036).

2010-12-12  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.2.

2010-12-11  Robby Stephenson  <robby@periapsis.org>

	* Updated Bibtex handler to translate ~ to non-breaking space.

2010-12-08  Robby Stephenson  <robby@periapsis.org>

	* Updated Allocine script to version 0.7.3 (Bug 258281).

2010-12-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed sorting multiple numeric values in column view.
	* Fixed sorting for numeric values in group view.

2010-12-01  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with FreeDB results not using track artists (Bug 258541).
	* Fixed bug with importing Bibtex file with keyword and keywords fields (Bug 258269);

2010-11-23  Robby Stephenson  <robby@periapsis.org>

	* Fixed Google Scholar fetcher to properly set bibtex cookie.

2010-11-21  Robby Stephenson  <robby@periapsis.org>

	* Added cover art to MusicBrainz fetcher.

2010-11-20  Robby Stephenson  <robby@periapsis.org>

	* Switched Nepomuk requirement to optional for file metadata. 

2010-11-14  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with updating groups for derived values (Bug 256374).

2010-11-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with list view settings not being saved between sessions (Bug 256373).

2010-11-06  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.1.

2010-11-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed edit dialog behavior when closing to be consistent with discarding data (Bug: 255938).

2010-10-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed error in Italian translation that caused HTML error and add workaround for future problems (Bug: 254863).

2010-10-17  Robby Stephenson  <robby@periapsis.org>

	* Updated Freebase source for adapted /music/release schema.

2010-10-14  Robby Stephenson  <robby@periapsis.org>
